# quickterface

./: .gitignore  .ocamlformat  AGENTS.md  CHANGES.md  LICENSE  Makefile  README.md  dune-project  index.html  quickterface-setup-script-tests.opam  quickterface.opam
.github/workflows/: build-test.yml  copilot-setup-steps.yml
common/: ansi_text_style.ml  color.ml  color.mli  dune  io.ml  math.ml  output_channel_options.ml  output_options.ml  output_text_options.ml
lib/: app.ml  dune  io.ml  terminal_app_intf.ml  terminal_app_intf.mli  web_app.ml  web_app_intf.ml
setup_script/: dune  main.ml  templates.ml  templates.mli
setup_script/templates/template-executable-directory/: app.ml  dune  my_terminal_app.ml  my_web_app.ml  terminal_app.ml  web_app.ml
setup_script/templates/web-app/: index.html
terminal_app/: dune  input_field.ml  input_field.mli  input_field_container.ml  input_field_container.mli  log.ml  log_item.ml  log_item.mli  minimal_terminal_io.ml  minimal_terminal_io.mli  notty_utils.ml  render_function.ml  render_info.ml  terminal_app_intf.ml  terminal_app_intf.mli  title_bar.mli  tui_terminal_io.ml  tui_terminal_io.mli  window.ml  window.mli
test/: dune
test/examples/math_app/: app.ml  dune  math_app_app.ml  math_app_terminal_app.ml  math_app_tui_app.ml  math_app_web_app.ml  terminal.ml  webapp.ml
test/examples/multiselect_app/: dune  multiselect_app_app.ml  multiselect_app_terminal_app.ml  multiselect_app_tui_app.ml  multiselect_app_web_app.ml  terminal.ml  webapp.ml
test/examples/simple_text_io_app/: dune  simple_text_io_app_app.ml  simple_text_io_app_terminal_app.ml  simple_text_io_app_tui_app.ml  simple_text_io_app_web_app.ml
test/examples/string_concatenator/: app.ml  dune  index.html  string_concatenator_app.ml  string_concatenator_terminal_app.ml  string_concatenator_tui_app.ml  string_concatenator_web_app.ml  terminal.ml  webapp.ml
test/examples/weather_app/: app.ml  dune  terminal.ml  weather_app_app.ml  weather_app_terminal_app.ml  weather_app_web_app.ml  webapp.ml
test/setup_script/: dune  helptext.t
test/setup_script/integration_test.t/: run.t
test/terminal_app/: dune  test_log_item_render_math.ml  test_notty_utils.ml  test_notty_utils_uchars.ml  test_progress_bar.ml
test/terminal_app/integration_tests/app_test/: dune
test/terminal_app/integration_tests/app_test/exec/: dune  my_app_app.ml  my_app_terminal_app.ml
test/terminal_app/integration_tests/app_test/test.t/: input.txt  run.t
test/tui_app/: dune  test_log_item_render_math.ml  test_notty_utils.ml  test_notty_utils_uchars.ml  test_progress_bar.ml
tui_app/: dune  input_field.ml  input_field.mli  input_field_container.ml  input_field_container.mli  log.ml  log.mli  log_item.ml  log_item.mli  notty_utils.ml  notty_utils.mli  progress_bar.ml  progress_bar.mli  progress_bar_config.ml  theme.ml  theme.mli  title_bar.ml  title_bar.mli  tui_app_intf.ml  tui_app_intf.mli  window.ml  window.mli
web_app/: app.ml  app.mli  class.ml  class.mli  dune  inputs.ml  inputs.mli  log.ml  log.mli  outputs.ml  outputs.mli  stylesheet.ml  web_app_intf.ml
web_app_backend/: app.ml  app.mli  bootstrap_setup.ml  class.ml  class.mli  dune  head.ml  head.mli  inputs.ml  inputs.mli  katex_setup.ml  katex_setup.mli  log.ml  log.mli  outputs.ml  outputs.mli  pico_setup.ml  stylesheet.ml  utils.ml  utils.mli
web_helper/: class.ml  dune  stylesheet.ml  stylesheet.mli
