(library
 (public_name quickterface)
 (name quickterface)
 (libraries core lwt lwt_ppx)
 (modules io app)
 (preprocess
  (pps ppx_jane lwt_ppx)))

(library
 (public_name quickterface.terminal_app)
 (name quickterface_terminal_app)
 (libraries core lwt lwt_ppx quickterface)
 (modules terminal_app_intf)
 (preprocess
  (pps ppx_jane lwt_ppx)))

(library
 (public_name quickterface.web_app)
 (name quickterface_web_app)
 (libraries
  core
  lwt
  lwt_ppx
  js_of_ocaml
  quickterface
  quickterface.web_app.backend)
 (modules web_app_intf)
 (preprocess
  (pps ppx_jane js_of_ocaml-ppx lwt_ppx)))
