(data_only_dirs templates)

(executable
 (package quickterface)
 (name main)
 (public_name quickterface-setup-script)
 (libraries core findlib fpath bos cmdliner)
 (modules templates main)
 (preprocess
  (pps ppx_jane)))

(install
 (package quickterface)
 (section share)
 (files
  (glob_files_rec templates/*)))
