(library
 (public_name quickterface.terminal_app)
 (name quickterface_terminal_app)
 (libraries
  core
  lwt
  lwt_ppx
  cohttp-lwt
  cohttp-lwt-unix
  notty
  notty.lwt
  cmdliner
  quickterface)
 (modules
  theme
  notty_utils
  render_info
  render_function
  log_item
  log
  input_field
  input_field_container
  title_bar
  progress_bar_config
  progress_bar
  window
  tui_terminal_io
  minimal_terminal_io
  terminal_app_intf)
 (preprocess
  (pps ppx_jane lwt_ppx)))
