(library
 (public_name quickterface.web_app.backend)
 (name quickterface_web_app_backend)
 (libraries core lwt lwt_ppx js_of_ocaml quickterface)
 (modules
  utils
  class
  stylesheet
  bootstrap_setup
  katex_setup
  outputs
  inputs
  log
  head
  app)
 (preprocess
  (pps ppx_jane js_of_ocaml-ppx lwt_ppx)))
