(library
 (name {app_name}_app)
 (modules {app_name}_app)
 (libraries lwt quickterface)
 (preprocess
  (pps lwt_ppx)))

(executable
 (public_name {app_name})
 (name {app_name}_terminal_app)
 (modes exe)
 (modules {app_name}_terminal_app)
 (libraries {app_name}_app quickterface.terminal_app))

(executable
 (name {app_name}_web_app)
 (modes js)
 (modules {app_name}_web_app)
 (libraries {app_name}_app quickterface.web_app))

(install
 (section share)
 (files
  (index.html as "{app_name}/index.html")
  ({app_name}_web_app.bc.js as "{app_name}/main.js")))
