(library
 (name math_app_app)
 (modules math_app_app)
 (libraries lwt quickterface)
 (preprocess
  (pps lwt_ppx)))

(executable
 (public_name math_app)
 (name math_app_terminal_app)
 (modes exe)
 (modules math_app_terminal_app)
 (libraries math_app_app quickterface.terminal_app))

(executable
 (public_name math_app_tui)
 (name math_app_tui_app)
 (modes exe)
 (modules math_app_tui_app)
 (libraries math_app_app quickterface.tui_app))

(executable
 (name math_app_web_app)
 (modes js)
 (modules math_app_web_app)
 (libraries math_app_app quickterface.web_app))

(install
 (section share)
 (files
  (index.html as "math_app/index.html")
  (math_app_web_app.bc.js as "math_app/main.js")))
