(library
 (name multiselect_app_app)
 (modules multiselect_app_app)
 (libraries lwt quickterface)
 (preprocess
  (pps lwt_ppx)))

(executable
 (public_name multiselect_app)
 (name multiselect_app_terminal_app)
 (modes exe)
 (modules multiselect_app_terminal_app)
 (libraries multiselect_app_app quickterface.terminal_app))

(executable
 (name multiselect_app_web_app)
 (modes js)
 (modules multiselect_app_web_app)
 (libraries multiselect_app_app quickterface.web_app))

(install
 (section share)
 (files
  (index.html as "multiselect_app/index.html")
  (multiselect_app_web_app.bc.js as "multiselect_app/main.js")))
