(library
 (name example_string_concatenator_app)
 (modules app)
 (libraries core quickterface)
 (preprocess
  (pps ppx_jane lwt_ppx)))

(executable
 (name terminal)
 (modes exe)
 (modules terminal)
 (libraries
  example_string_concatenator_app
  quickterface_terminal_app
  core
  lwt)
 (preprocess
  (pps ppx_jane lwt_ppx)))

(executable
 (name webapp)
 (modes js)
 (modules webapp)
 (libraries example_string_concatenator_app quickterface_web_app core lwt)
 (preprocess
  (pps ppx_jane lwt_ppx)))
