(library
 (name string_concatenator_app)
 (modules string_concatenator_app)
 (libraries lwt quickterface)
 (preprocess
  (pps lwt_ppx ppx_jane)))

(executable
 (package quickterface)
 (public_name string_concatenator)
 (name string_concatenator_terminal_app)
 (modes exe)
 (modules string_concatenator_terminal_app)
 (libraries string_concatenator_app quickterface.terminal_app))

(executable
 (name string_concatenator_web_app)
 (modes js)
 (modules string_concatenator_web_app)
 (libraries string_concatenator_app quickterface.web_app))

(install
 (package quickterface)
 (section share)
 (files
  (index.html as "string_concatenator/index.html")
  (string_concatenator_web_app.bc.js as "string_concatenator/main.js")))
