(library
 (name example_weather_app_app)
 (modules app)
 (libraries core quickterface)
 (preprocess
  (pps ppx_jane lwt_ppx)))

(executable
 (name terminal)
 (modes exe)
 (modules terminal)
 (libraries example_weather_app_app quickterface.terminal_app core lwt)
 (preprocess
  (pps ppx_jane lwt_ppx)))

(executable
 (name webapp)
 (modes js)
 (modules webapp)
 (libraries example_weather_app_app quickterface.web_app core lwt)
 (preprocess
  (pps ppx_jane lwt_ppx)))
