(library
 (name weather_app_app)
 (modules weather_app_app)
 (libraries lwt quickterface)
 (preprocess
  (pps lwt_ppx)))

(executable
 (public_name weather_app)
 (name weather_app_terminal_app)
 (modes exe)
 (modules weather_app_terminal_app)
 (libraries weather_app_app quickterface.terminal_app))

(executable
 (name weather_app_web_app)
 (modes js)
 (modules weather_app_web_app)
 (libraries weather_app_app quickterface.web_app))

(install
 (section share)
 (files
  (index.html as "weather_app/index.html")
  (weather_app_web_app.bc.js as "weather_app/main.js")))
